// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  max-width: 100%;
}

.emotion-2.emotion-2.emotion-2 {
  color: #3722ed;
}

<img
  class="emotion-0 emotion-1 emotion-2 test fp-Box fp-Image"
  src="test.png"
/>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  max-width: 100%;
}

<img
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Image"
  src="test.png"
/>
`;

exports[`props should render correctly for fit contain 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  max-width: 100%;
  object-fit: contain;
}

<img
  alt="Bean"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Image"
  src="test.png"
/>
`;

exports[`props should render correctly for fit cover 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  max-width: 100%;
  object-fit: cover;
}

<img
  alt="Bean"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Image"
  src="test.png"
/>
`;

exports[`props should render correctly for fixed image 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  max-width: 100%;
  max-width: unset;
}

<img
  alt="Bean"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Image"
  src="test.png"
/>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  max-width: 100%;
}

.emotion-2.emotion-2.emotion-2 {
  background-color: red;
}

<img
  alt="Bean"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Image"
  src="test.png"
/>
`;

exports[`theming Image.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  max-width: 100%;
}

.emotion-0 {
  background-color: red;
}

<img
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Image"
  src="test.png"
/>
`;

exports[`theming Image.contain should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  max-width: 100%;
  object-fit: contain;
  background-color: red;
}

<img
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Image"
  src="test.png"
/>
`;

exports[`theming Image.cover should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  max-width: 100%;
  object-fit: cover;
  background-color: red;
}

<img
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Image"
  src="test.png"
/>
`;

exports[`theming Image.fixed should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  max-width: 100%;
  max-width: unset;
  background-color: red;
}

<img
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Image"
  src="test.png"
/>
`;
